--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,18 +1,24 @@
-.search__result-wrapper {
+.books_main-wrap {
+    width: 1120px;
+    margin: 0 auto;
+
+}
+
+.books_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+    gap: 32px;
+}
+
+.books_main-title {
     width: 100%;
-    background-color: rgba(243, 243, 243, 1);
-    display: flex;
-    /* flex-direction: column; */
-    /* flex-grow: 1; */
-}
-.search {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    height: 76vh;
-}
-.book__wrapper {
-    width: 352px;
-    height: 100%;
-    margin-top: 25px;
+    height: 64px;
+    font-family: "Bebas Neue";
+    font-weight: 700;
+    line-height: 64px;
+    letter-spacing: px;
+    font-size: 56px;
+    color: hsla(249, 7%, 20%, 1);
 }
