--- a/src/components/ContentPage/ContentPage.css
+++ b/src/components/ContentPage/ContentPage.css
@@ -1,44 +1,27 @@
 .content__page-wrapper {
     width: 100%;
-    background-color: white;
 }
 .link {
     text-decoration: none;
 }
 .upper__wrapper {
     margin: 0 auto;
-    width: 50%;
+    width: 1120px;
 }
 .container {
     display: flex;
     flex-grow: 1;
     height: 100%;
 }
-.content__page_header {
-    width: 100%;
-    gap: 32px;
-    margin: 100px 0 0 -90px;
-}
-.content__page_header-arrow {
-    border: none;
-    background: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: rgba(49, 48, 55, 1);
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-}
+
+
 
 .content__page_header-title {
-    font-family: Bebas Neue;
+    width: 1000px;
+    font-family: "Bebas Neue";
     font-size: 56px;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 64px;
-    text-align: left;
     color: rgba(49, 48, 55, 1);
     margin-top: 20px;
     margin-bottom: 48px;
@@ -52,30 +35,30 @@
 .content__img-container {
     display: flex;
     justify-content: center;
-    width: 40%;
+    width: 544px;
+    height: 472px;
     padding-top: 0;
     background: rgba(254, 233, 226, 1);
 }
-.content__book-image {
-    width: 80%;
-}
+
 .content__book-infocard {
-    width: 40%;
+    width: 448px;
+    height: 472px;
     border-top: 1px solid rgba(231, 231, 231, 1);
 
 }
 .price_rate-row {
     display: flex;
     justify-content: space-between;
-    margin-top: 15px;
+    align-items: center;
+    margin-top: 40px;
     margin-bottom: 24px;
+    
 }
 .content__book-price {
-    font-family: Bebas Neue;
+    font-family: "Bebas Neue";
     font-size: 40px;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: left;
+    font-weight: 500;
     color: rgba(49, 48, 55, 1);
 }
 .content__book-rate {
@@ -103,7 +86,7 @@
 .content__book-publisher,
 .content__book-year,
 .content__book-page {
-    font-family: Helios;
+    font-family: "Inter";
     font-size: 16px;
     font-weight: 400;
     line-height: 32px;
@@ -124,11 +107,11 @@
     color: rgba(255, 255, 255, 1);
     cursor: pointer;
     border: none;
-    margin-top: 45px;
+    margin-top: 75px;
 }
 .middle__wrapper {
     margin: 0 auto;
-    width: 50%;
+    width: 1120px;
 }
 .tabs {
     display: flex;
@@ -157,8 +140,9 @@
 .tab-content {
     margin-top: 20px;
     padding: 10px;
-    border: 1px solid rgba(231, 231, 231, 1);
-    background-color: #f9f9f9;
+    font-family: "Inter";
+    font-size: 14px;
+    line-height: 24px;
 }
 .social__network {
     display: flex;
@@ -170,18 +154,6 @@
 
 
 
-
-
-
-
-
-
-
-
-/* .book-img {
-    width: 100%;
-    margin-top: 55px;
-} */
 .lower__wrapper {
     margin: 0 auto;
     width: 46%;
@@ -199,3 +171,9 @@
 
 }
 
+.dots{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
