--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -1,101 +1,115 @@
-.signin__page {
-    width: 100%;
-    height: 713px;
-    max-width: 1000px;
-    margin: 0 auto;
-    background-color: white;
-    position: relative;
-}
-.signin-wrapper {
-    width: 60%;
-    height: 472px;
-    padding: 40px 0px 0px 0px;
-    border: 1px solid rgba(218, 218, 218, 1);
-    position: absolute;
-    top: 58%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.signin__input_container {
-    width: 90%;
-    height: 392px;
-    margin: 40px auto;
-    position: relative; 
-    top: 40%; 
-    transform: translateY(-50%);
-    padding: 0;
+
+.sign-in__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+
 }
 
-.reg__form-footer {
+.sign-in__wrapper {
+    width: 544px;
+    height: 480px;
+    border: 1px solid rgba(231, 231, 231, 1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.form__header {
+    display: flex;
+    width: 88%;
+    padding: 0 32px;
+}
+
+.sign-in__header {
+    margin: 0 auto;
+    margin-top: 10px;
+    width: 50%;
+    height: 62px;
+    border-bottom: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Bebas Neue";
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.sign-up__header {
+    margin: 0 auto;
+    margin-top: 10px;
     width: 100%;
-    height: 20px;
+    height: 62px;
     display: flex;
+    align-items: center;
     justify-content: center;
+    font-family: "Bebas Neue";
+    font-weight: 500;
+    font-size: 24px;
+    opacity: 0.2;
+    border-bottom: 2px solid black;
+
 }
-.signin__footer-inner {
-    width: 253px;
-    height: 20px;
+
+.sign-up__header__link {
+    margin: 0 auto;
+    color: black;
+    width: 50%;
     display: flex;
-    gap: 10px;
-    justify-content: center;
-    margin-top: 24px;
+    align-items: center;
+    text-decoration: none;
 }
-.reg__form-footer-text {
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    color: rgba(141, 142, 151, 1);
+
+.sign-up__header:hover {
+    opacity: 0.4;
+    transition: 0.1s;
 }
-.reg__form-footer-btn {
-    font-family: Inter;
+
+.signin__inputs {
+    display: flex;
+    flex-direction: column;
+    width: 480px;
+    height: 240px;
+    margin: 32px;
+    gap: 16px;
+}
+
+.input__span {
+    display: flex;
+    height: 32px;
+    align-items: center;
+    font-family: "Inter";
     font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
+    font-weight: 700;
+}
+
+.input {
+    width: 468px !important;
+    height: 56px !important;
+    border: 1px solid rgba(231, 231, 231, 1) !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    padding-left: 10px !important;
+}
+
+.forgot__btn {
     color: rgba(49, 48, 55, 1);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background: none;
-}
-.forgot-btn {
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-family: Inter;
+    text-decoration: none;
+    font-family: "Inter";
     font-size: 14px;
     font-weight: 400;
-    line-height: 32px;
-    text-align: right;    
-    position: absolute;
-    bottom: 35%;
-    text-decoration: none;
-    color: rgba(49, 48, 55, 1);
-
 }
-.signin-btn {
-        width: 100%;
-        height: 56px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 2px 0px 0px 0px;
-        border: none;
-        cursor: pointer;
-        background: rgba(49, 48, 55, 1);
-        font-family: Bebas Neue;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 24px;
-        letter-spacing: 0.05em;
-        text-align: center;
-        color: rgba(255, 255, 255, 1);
-        margin-top: 48px;
-        border-radius: 5px;
-    }
 
-.input{
-    border: 1px solid rgba(141, 142, 151, 1);
+.sign-in__btn {
+    width: 480px;
+    height: 56px;
+    background-color: rgba(49, 48, 55, 1);
+    color: rgba(255, 255, 255, 1);
+    font-family: "Bebas Neue";
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 1.5px;
+    text-align: center;
 }
