--- a/src/components/BooksBasket/BooksBasket.css
+++ b/src/components/BooksBasket/BooksBasket.css
@@ -15,6 +15,7 @@
 .basket__header-title, .header__empty-cart {
     font-size: 56px;
     font-family: "Bebas Neue";
+    font-weight: 500;
     display: flex;
 }
 
