--- a/src/components/BooksBasket/BooksBasket.css
+++ b/src/components/BooksBasket/BooksBasket.css
@@ -63,7 +63,10 @@
     text-decoration: none;
 }
 
-
+.title__item-basket:hover { 
+    opacity: 0.7;
+    transition: 0.2s;
+}
 .author__item-basket {
     font-family: "Inter";
     font-size: 16px;
