--- a/src/components/ContentPage/ContentPage.css
+++ b/src/components/ContentPage/ContentPage.css
@@ -109,6 +109,11 @@
     border: none;
     margin-top: 75px;
 }
+
+.add-btn:hover{
+    opacity: 0.7;
+    transition: 0.2s;
+}
 .middle__wrapper {
     margin: 0 auto;
     width: 1120px;
