--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,6 @@
 .header__icons{
     width: 150px;
     display: flex;
-    /* align-items: start; */
     justify-content: space-between;
 }
 
@@ -30,3 +29,7 @@
     align-items: center;
 }
 
+.like__link:hover, .exit__icon:hover, .main__link:hover, .basket__link:hover, .user__link:hover{
+    opacity: 0.7;
+    transition: 0.2s;
+}
