--- a/src/components/LikesBooks/LikesBooks.css
+++ b/src/components/LikesBooks/LikesBooks.css
@@ -59,6 +59,12 @@
 
 .likes__link {
     text-decoration: none;
+
+}
+
+.likes__link:hover{
+    opacity: 0.7;
+    transition: 0.2s;
 }
 
 .likes__data-authors {
@@ -75,4 +81,14 @@
     font-weight: 500;
     line-height: 32px;
     text-align: left;
+}
+
+.heart__link{
+    fill: rgb(230, 85, 85);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 40%;
+    left: 25%;
 }
